# doxysummary

./: .gitignore  .readthedocs.yaml  LICENCE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-pypi.yml
docs/source/: conf.py  directive.rst  generate.rst  index.rst  userguide.rst  utils.rst  xml_tree.rst
docs/source/_static/: azura.css  azura.sty
docs/source/_templates/: pyobject.rst
doxysummary/: __init__.py  directive.py  generate.py
doxysummary/templates/: cppbase.rst  cppclass.rst
example/: Doxyfile  example.hpp
example/source/: conf.py  index.rst
example/xml/: classAbc.xml  classFoo.xml  classTemplateClass.xml  example_8hpp.xml  index.xml  namespaceexample.xml  structAStruct.xml  unionUnionExample.xml
sphinx_doxysummary/: __init__.py  directive.py  generate.py  utils.py  xmltree.py
sphinx_doxysummary/templates/: cppbase.rst
