[metadata]
name = sphinx-doxysummary
version = 2.3.4
author = Dinh Quoc Dang Nguyen
author_email = quocdang1998@gmail.com
description = Sphinx extension for Doxygen entries.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Sphinx, autosummary, Doxygen
url = https://github.com/quocdang1998/doxysummary
license = MIT
license_files = LICENSE.txt
classifiers =
    Framework :: Sphinx :: Extension
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Documentation :: Sphinx
platforms =
    Microsoft :: Windows
    POSIX :: Linux

[options]
include_package_data = True
packages = sphinx_doxysummary
package_dir =
    sphinx_doxysummary = sphinx_doxysummary
python_requires = >=3.6
install_requires =
    Sphinx>=4.0.0
    lxml>=4.9

[options.extras_require]
example =
    breathe>=4.34
    sphinx-rtd-theme
